@@ -6,6 +6,8 @@
  */
 package com.sun.tools.visualvm.modules.coherence.tablemodel.model;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.sun.tools.visualvm.modules.coherence.VisualVMModel;
 
 import com.sun.tools.visualvm.modules.coherence.helper.HttpRequestSender;
@@ -60,6 +62,17 @@ public class CacheData
 
         try
             {
+            if (sender instanceof HttpRequestSender)
+                {
+                // we can more effectively retrieve the data using REST aggregations
+                SortedMap<Object, Data> mapAggregatedData = getAggregatedDataFromHttpQuerying(model, (HttpRequestSender) sender);
+                if (mapAggregatedData != null)
+                    {
+                    return new ArrayList<>(mapAggregatedData.entrySet());
+                    }
+                // else fall through and use less efficient way
+                }
+
             // get the list of caches
             Set<ObjectName> cacheNamesSet = sender.getAllCacheMembers();
 
@@ -80,9 +93,9 @@ public class CacheData
 
                 data = new CacheData();
 
-                data.setColumn(CacheData.SIZE, Integer.valueOf(0));
-                data.setColumn(CacheData.MEMORY_USAGE_BYTES, Long.valueOf(0));
-                data.setColumn(CacheData.MEMORY_USAGE_MB, Integer.valueOf(0));
+                data.setColumn(CacheData.SIZE, 0);
+                data.setColumn(CacheData.MEMORY_USAGE_BYTES, 0L);
+                data.setColumn(CacheData.MEMORY_USAGE_MB, 0);
                 data.setColumn(CacheData.CACHE_NAME, key);
 
                 mapData.put(key, data);
@@ -158,9 +171,9 @@ public class CacheData
                 // for FIXED unit calculator make the memory bytes and MB and avg object size null
                 if (data.getColumn(CacheData.UNIT_CALCULATOR).equals("FIXED"))
                     {
-                    data.setColumn(CacheData.AVG_OBJECT_SIZE, Integer.valueOf(0));
-                    data.setColumn(CacheData.MEMORY_USAGE_BYTES, Integer.valueOf(0));
-                    data.setColumn(CacheData.MEMORY_USAGE_MB, Integer.valueOf(0));
+                    data.setColumn(CacheData.AVG_OBJECT_SIZE, 0);
+                    data.setColumn(CacheData.MEMORY_USAGE_BYTES, 0);
+                    data.setColumn(CacheData.MEMORY_USAGE_MB, 0);
                     }
                 else {
                     if ((Integer) data.getColumn(CacheData.SIZE) != 0)
@@ -172,7 +185,7 @@ public class CacheData
 
                     Long nMemoryUsageMB = ((Long) data.getColumn(CacheData.MEMORY_USAGE_BYTES)) / 1024 / 1024;
 
-                    data.setColumn(CacheData.MEMORY_USAGE_MB, Integer.valueOf(nMemoryUsageMB.intValue()));
+                    data.setColumn(CacheData.MEMORY_USAGE_MB, nMemoryUsageMB.intValue());
                 }
 
                 mapData.put(key, data);
@@ -208,20 +221,20 @@ public class CacheData
         Data data = new CacheData();
 
         // the identifier for this row is the service name and cache name
-        Pair<String, String> key = new Pair<String, String>(aoColumns[2].toString(), aoColumns[3].toString());
+        Pair<String, String> key = new Pair<>(aoColumns[2].toString(), aoColumns[3].toString());
 
         data.setColumn(CacheData.CACHE_NAME, key);
-        data.setColumn(CacheData.SIZE, new Integer(getNumberValue(aoColumns[4].toString())));
-        data.setColumn(CacheData.MEMORY_USAGE_BYTES, new Long(getNumberValue(aoColumns[5].toString())));
-        data.setColumn(CacheData.MEMORY_USAGE_MB, new Integer(getNumberValue(aoColumns[5].toString())) / 1024 / 1024);
+        data.setColumn(CacheData.SIZE, Integer.valueOf(getNumberValue(aoColumns[4].toString())));
+        data.setColumn(CacheData.MEMORY_USAGE_BYTES, Long.valueOf(getNumberValue(aoColumns[5].toString())));
+        data.setColumn(CacheData.MEMORY_USAGE_MB, Integer.valueOf(getNumberValue(aoColumns[5].toString())) / 1024 / 1024);
 
         if (aoColumns[7] != null)
             {
-            data.setColumn(CacheData.AVG_OBJECT_SIZE, new Integer(getNumberValue(aoColumns[7].toString())));
+            data.setColumn(CacheData.AVG_OBJECT_SIZE, Integer.valueOf(getNumberValue(aoColumns[7].toString())));
             }
         else
             {
-            data.setColumn(CacheData.AVG_OBJECT_SIZE, Integer.valueOf(0));
+            data.setColumn(CacheData.AVG_OBJECT_SIZE, 0);
             }
 
         return data;
@@ -231,7 +244,78 @@ public class CacheData
     public SortedMap<Object, Data> getAggregatedDataFromHttpQuerying(VisualVMModel model, HttpRequestSender requestSender)
             throws Exception
         {
-        // no reports being used, hence using default functionality provided in getJMXData
+        // minimize the number of round-trips by querying each of the services and getting the cache details
+        // this will be one per service
+        List<Map.Entry<Object, Data>> serviceData = model.getData(VisualVMModel.DataType.SERVICE);
+        if (serviceData != null && serviceData.size() > 0)
+            {
+            final SortedMap<Object, Data> mapData = new TreeMap<>();
+            
+            for (Map.Entry<Object, Data> service : serviceData)
+                {
+                String   sService            = (String) service.getKey();
+                String[] asServiceDetails    = getDomainAndService(sService);
+                String   sDomainPartition    = asServiceDetails[0];
+                String   sServiceName        = asServiceDetails[1];
+                
+                JsonNode listOfServiceCaches = requestSender.getListOfServiceCaches(sServiceName, sDomainPartition);
+                JsonNode itemsNode           = listOfServiceCaches.get("items");
+                boolean  fisDistributed      = model.getDistributedCaches().contains(sServiceName);
+
+                if (itemsNode != null && itemsNode.isArray())
+                    {
+                    for (int i = 0; i < ((ArrayNode) itemsNode).size(); i++)
+                        {
+                        Data     data         = new CacheData();
+                        JsonNode cacheDetails = itemsNode.get(i);
+                        String   sCacheName   = cacheDetails.get("name").asText();
+
+                        Pair<String, String> key = new Pair<>(sServiceName, sCacheName);
+
+                        JsonNode nodeSize = cacheDetails.get("size");
+                        if (nodeSize == null)
+                            {
+                            // Connecting to version without Bug 32134281 fix so force less efficient way
+                            return null;
+                            }
+                        int nCacheSize = nodeSize.asInt();
+
+                        String sUnitCalculator = getChildValue("true", "memoryUnits", cacheDetails) != null
+                                ? "BINARY" : "FIXED";
+                        int nMembers = Integer.parseInt(getChildValue("count", "averageMissMillis", cacheDetails));
+                        
+                        data.setColumn(CACHE_NAME, key);
+
+                        // if is replicated so the actual size has been aggregated so we must divide by the member count
+                        data.setColumn(SIZE, fisDistributed ? nCacheSize : nCacheSize / nMembers);
+
+                        data.setColumn(UNIT_CALCULATOR, sUnitCalculator);
+                        long cMemoryUsageBytes = Long.parseLong(getFirstMemberOfArray(cacheDetails, "unitFactor"))
+                                            * cacheDetails.get("units").asInt();
+                        data.setColumn(MEMORY_USAGE_BYTES, cMemoryUsageBytes);
+                        data.setColumn(MEMORY_USAGE_MB, (int) (cMemoryUsageBytes / 1024 / 1024));
+
+                        if (data.getColumn(CacheData.UNIT_CALCULATOR).equals("FIXED"))
+                            {
+                            data.setColumn(CacheData.AVG_OBJECT_SIZE, 0);
+                            data.setColumn(CacheData.MEMORY_USAGE_BYTES, 0);
+                            data.setColumn(CacheData.MEMORY_USAGE_MB, 0);
+                            }
+                        else
+                            {
+                            if (nCacheSize != 0)
+                                {
+                                data.setColumn(CacheData.AVG_OBJECT_SIZE, (int) (cMemoryUsageBytes / nCacheSize));
+                                }
+                            }
+
+                        mapData.put(key, data);
+                        }
+                    }
+                }
+                return mapData;
+            }
+
         return null;
         }
 
